# yt-dlp-mcp-server

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/yt_dlp_server/: logs.py  main.py  schemas.py  userproxy.py
tests/: conftest.py  test_client.py  test_download.py  test_userproxy.py
