[project]
name = "yt-dlp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "tolatolatop",email = "tolatolatop@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "yt-dlp (>=2025.7.21,<2026.0.0)",
    "fastmcp (>=2.10.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "yt_dlp_server", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
